--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4550,7 +4550,7 @@ a {
 }
 .cid-uO9y6bEpFM {
   padding-top: 0rem;
-  padding-bottom: 5rem;
+  padding-bottom: 0rem;
   background-color: #edefeb;
 }
 .cid-uO9y6bEpFM .mbr-fallback-image.disabled {
@@ -4598,4 +4598,130 @@ a {
 }
 .cid-uO9y6bEpFM .bang {
   font-size: 10px !important;
+}
+.cid-uOaM3PXrgG {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-uOaM3PXrgG .row {
+  flex-direction: row-reverse;
+}
+.cid-uOaM3PXrgG .justify-content-center {
+  align-items: center;
+}
+.cid-uOaM3PXrgG .mbr-section-title {
+  text-align: center;
+  color: #3b7ea1;
+}
+.cid-uOaM3PXrgG .mbr-text,
+.cid-uOaM3PXrgG .mbr-section-btn {
+  text-align: center;
+}
+@media (max-width: 767px) {
+  .cid-uOaM3PXrgG .item-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-uOaM3PXrgG .item-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-uOaM3PXrgG .item-wrapper {
+    padding: 4rem;
+  }
+}
+.cid-uOaM545RCu {
+  padding-top: 5rem;
+  padding-bottom: 10rem;
+  background-image: url("../../../assets/images/4.png-5-1920x1080.png");
+}
+.cid-uOaM545RCu .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uOaM545RCu .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 992px) {
+  .cid-uOaM545RCu .row .map-wrapper {
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-uOaM545RCu .row .map-wrapper {
+    margin-top: 1rem;
+  }
+}
+.cid-uOaM545RCu .google-map {
+  height: 100%;
+  position: relative;
+}
+.cid-uOaM545RCu .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+@media (max-width: 992px) {
+  .cid-uOaM545RCu .google-map iframe {
+    min-height: 350px;
+  }
+}
+.cid-uOaM545RCu .google-map [data-state-details] {
+  color: #6b6763;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-uOaM545RCu .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-uOaM545RCu .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-uOaM545RCu .card-wrapper {
+  padding: 2.25rem;
+  background: #ffffff;
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+  .cid-uOaM545RCu .card-wrapper {
+    padding: 1.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-uOaM545RCu .card-wrapper {
+    padding: 2rem 1.5rem;
+  }
+}
+.cid-uOaM545RCu ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.cid-uOaM545RCu .content-head {
+  max-width: 800px;
+}
+.cid-uOaM545RCu .cardTitle {
+  color: #ffffff;
+}
+.cid-uOaM545RCu .card,
+.cid-uOaM545RCu .card-wrapper,
+.cid-uOaM545RCu .text-wrapper {
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+.cid-uOaM545RCu .list,
+.cid-uOaM545RCu .item-wrap {
+  color: #ffffff;
 }
