--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4497,7 +4497,7 @@ a {
 .cid-uO9nvtSVMN {
   padding-top: 6rem;
   padding-bottom: 0rem;
-  background-color: #edefeb;
+  background-color: #ffffff;
 }
 .cid-uO9nvtSVMN .mbr-fallback-image.disabled {
   display: none;
@@ -4551,7 +4551,7 @@ a {
 .cid-uO9y6bEpFM {
   padding-top: 0rem;
   padding-bottom: 0rem;
-  background-color: #edefeb;
+  background-color: #ffffff;
 }
 .cid-uO9y6bEpFM .mbr-fallback-image.disabled {
   display: none;
